# msdis_lidar

./: Download_LiDAr_DATA_Automatically.py  Examination_Lab.ipynb  LICENSE  LiDAR_data_Perche_Creek.dbf  Perche_Creek_HU12.shp.xml  README.md  Untitled.ipynb  pyproject.toml  setup.py
.ipynb_checkpoints/: Examination_Lab-checkpoint.ipynb
msdis_lidar/: __init__.py  downloader.py  shapefile_handler.py  utils.py  visualization.py
msdis_lidar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
msdis_lidar/tests/: test_shapefile_handler.py
myenv/Scripts/: activate  activate.bat
tests/: Perche_Creek_HU12.sbn  Perche_Creek_HU12.sbx  Perche_Creek_HU12.shp  Perche_Creek_HU12.shx  test_downloader.py  test_shapefile_handler.py
