[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["msdis_lidar"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.scripts]
# If you have console scripts, list them here
# Example: my-script = "my_package.module:function"

[tool.setuptools.project]
name = "msdis_lidar"
version = "0.1"
description = "A package for downloading and handling LiDAR data from MSDIS"
long_description = """
A detailed description of the msdis_lidar package.
"""
long_description_content_type = "text/markdown"
author = "Your Name"
author_email = "your.email@example.com"
url = "https://github.com/yourusername/msdis_lidar"
license = "MIT"
keywords = ["LiDAR", "MSDIS", "Python"]
