[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "msdis_lidar"
version = "0.1"
description = "A Python package for downloading and visualizing LiDAR data from MSDIS"
long_description = """
A Python package for downloading and visualizing LiDAR data from MSDIS.
"""
long_description_content_type = "text/markdown"
author = "M. Jaweed Nazary"
url = "https://github.com/JaweedNazary/Automatic_LiDAR_Download_from_MSDIS"
license = "MIT"
python_requires = ">=3.10"

[tool.setuptools.options]
packages = ["msdis_lidar"]
include_package_data = true
zip_safe = false

[tool.setuptools.options.packages.find]
include = ["msdis_lidar", "msdis_lidar.*"]

[tool.setuptools.dependencies]
install_requires = [
    "geopandas",
    "rich",
    "requests",
    "folium",
    "tabulate",
]

[tool.setuptools.test]
test_requires = [
    "pytest",
]

[tool.setuptools.classifiers]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
